--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo">
-                        <h1 style="padding-top: 30px;font-weight: 800;">WEBIIZY</h1>
+                        <h1 style="padding-top: 30px;font-weight: 800;color: white;">WEBIIZY</h1>
                           <!-- <img src="assets/images/templatemo-eduwell.png" alt="Webiizy"> -->
                       </a>
                       <!-- ***** Logo End ***** -->
