--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
             <h6>Welcome to Webiizy</h6>
             <h2>Best Place for Digital <em>Marketing!</em></h2>
             <div class="main-button-gradient">
-              <div class="scroll-to-section"><a href="tel:+919702128346">CALL US NOW!</a></div>
+              <div class="scroll-to-section"><a href="tel: +919702128346">CALL US NOW!</a></div>
             </div>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="right-image">
-            <img src="assets/images/banner-right-image.png" alt="">
+            <img src="assets/images/banner-right-image.png" alt="webiizy">
           </div>
         </div>
       </div>
