--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <h6>Welcome to Webiizy</h6>
             <h2>Best Place for Digital <em>Marketing!</em></h2>
             <div class="main-button-gradient">
-              <div class="scroll-to-section"><a href="tel:+919702128346">CALL US NOW!</a></div>
+              <div class="main-gradient-button"><a href="tel:+919702128346">CALL US NOW!</a></div>
             </div>
           </div>
         </div>
