--- a/index.html
+++ b/index.html
@@ -328,6 +328,74 @@
     </div>
   </section>
 
+
+
+
+  <section class="featured-product">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="section-heading">
+            <h6>Why Webiizy ?</h6>
+            <h4>Best Of Our <em>HardWork</em></h4>
+          </div>
+        </div>
+        <div class="col-lg-3 align-self-center">
+          <div class="left-info">
+            <div class="col-lg-12">
+              <div class="info-item">
+                <div class="icon">
+                  <img src="assets/images/service-icon-01.png" alt="">
+                </div>
+                <h4>Results-Driven Approach</h4>
+                <p>We focus on delivering measurable success for every project.</p>
+              </div>
+            </div>
+            <div class="col-lg-12">
+              <div class="info-item last-info">
+                <div class="icon">
+                  <img src="assets/images/service-icon-01.png" alt="">
+                </div>
+                <h4>Creative & Strategic Solutions</h4>
+                <p>Innovation meets strategy to create impactful digital experiences.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="product-image">
+            <img src="assets/images/ch.png" alt="">
+          </div>
+        </div>
+        <div class="col-lg-3 align-self-center">
+          <div class="right-info">
+            <div class="col-lg-12">
+              <div class="info-item">
+                <div class="icon">
+                  <img src="assets/images/service-icon-01.png" alt="">
+                </div>
+                <h4>Cutting-Edge Technology</h4>
+                <p> We use the latest tools and trends to keep you ahead of the competition.</p>
+              </div>
+            </div>
+            <div class="col-lg-12">
+              <div class="info-item last-info">
+                <div class="icon">
+                  <img src="assets/images/service-icon-01.png" alt="">
+                </div>
+                <h4>Client-Centric Service</h4>
+                <p>Your success is our priority, with tailored solutions for your unique needs.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
   <section class="simple-cta">
     <div class="container">
       <div class="row">
