new section addded today

--- a/index.html
+++ b/index.html
@@ -395,6 +395,55 @@
   </section>
 
 
+  <section class="more-info">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-5">
+          <div class="section-heading">
+            <h6>What Sets Webiizy Apart?</h6>
+            <h4>Know More <em>About Us</em></h4>
+          </div>
+          <p>Webiizy is a premier digital marketing and website development company based in Mumbai, dedicated to helping businesses grow in the digital landscape. <br><br>At Webiizy, we believe in transforming ideas into success stories. Let’s create something amazing together!</p>
+          <ul>
+            <li>- Innovative Approach.</li>
+            <li>- Data-Driven Strategies.</li>
+            <li>- Comprehensive Services.</li>
+            <li>- Customer-Centric Focus.</li>
+          </ul>
+        </div>
+        <div class="col-lg-6 offset-lg-1 align-self-center">
+          <div class="row">
+            <div class="col-6">
+              <div class="count-area-content">
+                <div class="count-digit">158</div>
+                <div class="count-title">Live Clients</div>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="count-area-content">
+                <div class="count-digit">174</div>
+                <div class="count-title">Total Clients</div>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="count-area-content">
+                <div class="count-digit">17</div>
+                <div class="count-title">Team Size</div>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="count-area-content">
+                <div class="count-digit">12</div>
+                <div class="count-title">Core Team Experience(Yrs)</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 
   <section class="simple-cta">
     <div class="container">
